# docs/swagger.json
@@ -71,6 +71,13 @@
                         "name": "create_phone",
                         "in": "formData",
                         "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "商品图片",
+                        "name": "good_img",
+                        "in": "formData",
+                        "required": true
                     }
                 ],
                 "responses": {
